# anygrasp

./: .gitignore  LICENSE  README.md  adjust_local_grasp_points.py  augment_grasp_dataset.py  generate_grasps.py  plots.py  pyproject.toml  requirements.txt  vis_grasp.py
dexee/: dexee.urdf  dexee.vsim  dexee_with_depth.vsim  dx_finger.urdf  dx_finger.vsim  dx_finger_mujoco.vsim  dx_finger_with_depth.vsim
dexee/meshes/: F0_J0_link.dae  F0_base.dae  F0_distal.dae  F0_middle.dae  F0_proximal.dae  Hand_Base.dae
dexee/meshes/collision/: F0_J0_link.stl  F0_base.stl  F0_distal.stl  F0_middle.stl  F0_proximal.stl  Hand_Base.stl
src/: dataset.py  grasp_generator.py  grasp_rrt_expand.py  plots.py  robot_config.py
src/anygrasp/: dataset.py  grasp_generator.py  grasp_rrt_expand.py  robot_config.py
src/anygrasp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
